--- a/Views/Stats/Index.cshtml
+++ b/Views/Stats/Index.cshtml
@@ -1,17 +1,18 @@
-﻿@model List<Befit.Models.ExerciseStatsViewModel>
+﻿@model IEnumerable<Befit.Models.ExerciseStatsViewModel>
 
-<h2>Statystyki ćwiczeń</h2>
+<h1>Statystyki ćwiczeń</h1>
 
-<table class="table table-striped">
+<table class="table">
     <thead>
         <tr>
-            <th>Nazwa ćwiczenia</th>
-            <th>Ile razy wykonano</th>
+            <th>Ćwiczenie</th>
+            <th>Ilość wykonań</th>
             <th>Łączna liczba powtórzeń</th>
             <th>Średnie obciążenie</th>
             <th>Maksymalne obciążenie</th>
         </tr>
     </thead>
+
     <tbody>
         @foreach (var item in Model)
         {
