--- a/Views/ExerciseTypes/Details.cshtml
+++ b/Views/ExerciseTypes/Details.cshtml
@@ -1,24 +1,25 @@
 ﻿@model Befit.Models.ExerciseType
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Szczegóły typu ćwiczenia";
 }
 
-<h1>Details</h1>
+<h1>Szczegóły typu ćwiczenia</h1>
 
 <div>
-    <h4>ExerciseType</h4>
+    <h4>Dane typu ćwiczenia</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edytuj</a> |
+    <a asp-action="Index">Powrót do listy</a>
 </div>
