--- a/Views/ExerciseTypes/Index.cshtml
+++ b/Views/ExerciseTypes/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<Befit.Models.ExerciseType>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Typy ćwiczeń";
 }
 
-<h1>Index</h1>
+<h1>Typy ćwiczeń</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Dodaj nowy typ ćwiczenia</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
@@ -19,17 +20,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edytuj</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
