--- a/Views/TrainingEntries/Create.cshtml
+++ b/Views/TrainingEntries/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Befit.Models.DTO.TrainingEntryCreateDto
 
 @{
-    ViewData["Title"] = "Create training entry";
+    ViewData["Title"] = "Dodaj ćwiczenie";
 }
 
-<h1>Create training entry</h1>
+<h1>Dodaj wykonane ćwiczenie</h1>
 
 <form asp-action="Create">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -41,8 +41,8 @@
         <span asp-validation-for="Reps" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-action="Index" class="btn btn-secondary">Back to list</a>
+    <button type="submit" class="btn btn-primary">Zapisz</button>
+    <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
 </form>
 
 @section Scripts {
