--- a/Views/TrainingEntries/Delete.cshtml
+++ b/Views/TrainingEntries/Delete.cshtml
@@ -1,51 +1,58 @@
 ﻿@model Befit.Models.TrainingEntry
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Usuń ćwiczenie";
 }
 
-<h1>Delete</h1>
+<h1>Usuń wykonane ćwiczenie</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć to ćwiczenie?</h3>
+
 <div>
-    <h4>TrainingEntry</h4>
+    <h4>Szczegóły ćwiczenia</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TrainingSession)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TrainingSession.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TrainingSession.StartTime)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ExerciseType)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ExerciseType.Name)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Weight)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Weight)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Sets)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Sets)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Reps)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Reps)
         </dd>
+
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Usuń" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
     </form>
 </div>
