--- a/Views/TrainingEntries/Details.cshtml
+++ b/Views/TrainingEntries/Details.cshtml
@@ -1,48 +1,55 @@
 ﻿@model Befit.Models.TrainingEntry
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Szczegóły ćwiczenia";
 }
 
-<h1>Details</h1>
+<h1>Szczegóły ćwiczenia</h1>
 
 <div>
-    <h4>TrainingEntry</h4>
+    <h4>Wykonane ćwiczenie</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TrainingSession)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TrainingSession.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TrainingSession.StartTime)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ExerciseType)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ExerciseType.Name)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Weight)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Weight)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Sets)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Sets)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Reps)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Reps)
         </dd>
+
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edytuj</a> |
+    <a asp-action="Index">Powrót do listy</a>
 </div>
