--- a/Views/TrainingEntries/Edit.cshtml
+++ b/Views/TrainingEntries/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Befit.Models.DTO.TrainingEntryCreateDto
 
 @{
-    ViewData["Title"] = "Edit training entry";
+    ViewData["Title"] = "Edytuj ćwiczenie";
 }
 
-<h1>Edit training entry</h1>
+<h1>Edytuj wykonane ćwiczenie</h1>
 
 <form asp-action="Edit" asp-route-id="@ViewBag.EntryId">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -41,8 +41,8 @@
         <span asp-validation-for="Reps" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-action="Index" class="btn btn-secondary">Back to list</a>
+    <button type="submit" class="btn btn-primary">Zapisz zmiany</button>
+    <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
 </form>
 
 @section Scripts {
