--- a/Views/TrainingEntries/Index.cshtml
+++ b/Views/TrainingEntries/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<Befit.Models.TrainingEntry>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista wykonanych ćwiczeń";
 }
 
-<h1>Index</h1>
+<h1>Lista wykonanych ćwiczeń</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary">Dodaj ćwiczenie</a>
 </p>
+
 <table class="table">
     <thead>
         <tr>
@@ -31,29 +32,30 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TrainingSession.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExerciseType.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Weight)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sets)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Reps)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TrainingSession.StartTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ExerciseType.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Weight)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Sets)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Reps)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edytuj</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Usuń</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
