--- a/Views/TrainingSessions/Delete.cshtml
+++ b/Views/TrainingSessions/Delete.cshtml
@@ -1,33 +1,35 @@
 ﻿@model Befit.Models.TrainingSession
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Usuń sesję treningową";
 }
 
-<h1>Delete</h1>
+<h1>Usuń sesję treningową</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy na pewno chcesz usunąć tę sesję treningową?</h3>
+
 <div>
-    <h4>TrainingSession</h4>
+    <h4>Szczegóły sesji</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StartTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StartTime)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EndTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EndTime)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Usuń" class="btn btn-danger" /> |
+        <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
     </form>
 </div>
