--- a/Views/TrainingSessions/Details.cshtml
+++ b/Views/TrainingSessions/Details.cshtml
@@ -1,30 +1,32 @@
 ﻿@model Befit.Models.TrainingSession
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Szczegóły sesji treningowej";
 }
 
-<h1>Details</h1>
+<h1>Szczegóły sesji treningowej</h1>
 
 <div>
-    <h4>TrainingSession</h4>
+    <h4>Dane sesji</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StartTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StartTime)
         </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.EndTime)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.EndTime)
         </dd>
     </dl>
 </div>
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edytuj</a> |
+    <a asp-action="Index">Powrót do listy</a>
 </div>
