--- a/Views/TrainingSessions/Edit.cshtml
+++ b/Views/TrainingSessions/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model Befit.Models.DTO.TrainingSessionCreateDto
+﻿@model Befit.Models.TrainingSession
 
 @{
-    ViewData["Title"] = "Edit training session";
+    ViewData["Title"] = "Edytuj sesję treningową";
 }
 
-<h1>Edit training session</h1>
+<h1>Edytuj sesję treningową</h1>
 
 <form asp-action="Edit" asp-route-id="@ViewBag.SessionId">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -21,8 +21,8 @@
         <span asp-validation-for="EndTime" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a asp-action="Index" class="btn btn-secondary">Back to list</a>
+    <button type="submit" class="btn btn-primary">Zapisz zmiany</button>
+    <a asp-action="Index" class="btn btn-secondary">Powrót do listy</a>
 </form>
 
 @section Scripts {
